--- a/.jshintrc
+++ b/.jshintrc
@@ -33,13 +33,13 @@
   "latedef": true,
 
   // Enforce line length to 80 characters
-  "maxlen": 80,
+  "maxlen": 180,
 
   // Require capitalized names for constructor functions.
   "newcap": true,
 
   // Enforce use of single quotation marks for strings.
-  "quotmark": "single",
+  // "quotmark": "single",
 
   // Enforce placing 'use strict' at the top function scope
   "strict": true,
